<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/animalFactsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/facts_color_background1"
            android:clipChildren="false" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/animalFactsFabUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="?facts_dimension_padding"
            android:src="@drawable/ic_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
