...
        <TextView
            android:id="@+id/catUserNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User name:"
            android:textAppearance="?facts_textAppearance_header1"
            app:layout_constraintBottom_toTopOf="@id/catUserName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/catUserNameLabel"
            tools:text="Dennis" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/catUserFabEdit"
            style="?facts_style_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="?facts_dimension_padding"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
...
