...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/categoriesFabAddCategory"
            style="?facts_style_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="?facts_dimension_padding"
            android:src="@drawable/ic_category"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@id/categoriesFabAdd"
            app:layout_constraintEnd_toEndOf="@id/categoriesFabAdd"
            app:layout_constraintStart_toStartOf="@id/categoriesFabAdd" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/categoriesFabAddFact"
            style="?facts_style_fab"
...
